Contact page added

--- a/Front/final-project/src/app/views/app/account/account.component.html
+++ b/Front/final-project/src/app/views/app/account/account.component.html
@@ -20,19 +20,9 @@
                             <div class="icon">
                                 <img src="https://res.cloudinary.com/dyqcmbewn/image/upload/v1619694667/infixvuci/address_lm4vgx.svg"
                                     alt="adres-icon">
-                                <h4>Adres</h4>
+                                <h4>Ünvan</h4>
                             </div>
                             <a [routerLink]="['/app/account/adress']">Yenilə »</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="single-account-item">
-                            <div class="icon">
-                                <img src="https://res.cloudinary.com/dyqcmbewn/image/upload/v1619694765/infixvuci/account_g7hdot.svg"
-                                    alt="account-icon">
-                                <h4>Hesab məlumatları</h4>
-                            </div>
-                            <a [routerLink]="['/app/account/details']">Yenilə »</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
