--- a/Front/final-project/src/app/shared/containers/layout/footer/footer.component.html
+++ b/Front/final-project/src/app/shared/containers/layout/footer/footer.component.html
@@ -19,67 +19,45 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="footer-links">
-                        <h4>QUICK MENU</h4>
+                        <h4>Sürətli Menu</h4>
                         <ul>
                             <li>
-                                <a href="#">TV & Video</a>
+                                <a [routerLink]="['/app/new-arrivals']">Yeni gələnlər</a>
                             </li>
                             <li>
-                                <a href="#">Home Audio & Theatre</a>
+                                <a [routerLink]="['/app/trend']">Trend</a>
                             </li>
                             <li>
-                                <a href="#">Camera, Photo & Video</a>
-                            </li>
-                            <li>
-                                <a href="#">Cell Phones & Accessories</a>
-                            </li>
-                            <li>
-                                <a href="#">Headphones</a>
+                                <a [routerLink]="['/app/hot-deal']">Ən yaxşı təklif</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="footer-links">
-                        <h4>INFOMATION</h4>
+                        <h4>Məlumat</h4>
                         <ul>
                             <li>
-                                <a href="#">About Us </a>
+                                <a [routerLink]="['/app/contact']">Əlaqə </a>
                             </li>
                             <li>
-                                <a href="#">Brands</a>
-                            </li>
-                            <li>
-                                <a href="#">Gift Vouchers</a>
-                            </li>
-                            <li>
-                                <a href="#">Site Map</a>
-                            </li>
-                            <li>
-                                <a href="#">Accessories</a>
+                                <a [routerLink]="['/app/cart']">Səbət</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-2 col-sm-6">
                     <div class="footer-links">
-                        <h4>MY ACCOUNT</h4>
+                        <h4>Mənim Hesabım</h4>
                         <ul>
                             <li>
-                                <a href="#">My Account </a>
+                                <a [routerLink]="['/app/account']">Şəxsi Kabinet </a>
                             </li>
                             <li>
-                                <a href="#">Order History</a>
+                                <a [routerLink]="['/app/account/orders']">Sifarişlər</a>
                             </li>
                             <li>
-                                <a href="#">Wish List</a>
-                            </li>
-                            <li>
-                                <a href="#">Order Details
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">Wishlist</a>
+                                <a [routerLink]="['/app/wishlist']">Sevimlilər</a>
                             </li>
                         </ul>
                     </div>
