--- a/Front/final-project/src/app/views/app/home/home.component.scss
+++ b/Front/final-project/src/app/views/app/home/home.component.scss
@@ -61,6 +61,7 @@
     .collection-product {
       width: 50%;
       text-align: center;
+      margin-right: 10px;
       img {
         max-height: 450px;
         transform: scale(1);
