--- a/Front/final-project/src/app/shared/containers/layout/header/header.component.html
+++ b/Front/final-project/src/app/shared/containers/layout/header/header.component.html
@@ -2,7 +2,7 @@
     <section id="header-navbar">
         <div class="header-top mt-4">
             <div class="container">
-                <div class="row mx-auto">
+                <div class="row mx-auto align-items-center">
                     <div class="col-xl-3 col-lg-2 col-md-3 col-6">
                         <div class="logo d-flex align-items-center">
                             <a href="#" [ngClass]="{'clicked':toggle}" (click)="menuBtn($event)" class="menu-btn me-2">
@@ -122,74 +122,15 @@
                 </div>
                 <div [ngClass]="{'mobile-active':toggle}" class="mobile-menu">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li class="dropdown">
-                            <a class="drop-btn" type="button" data-bs-toggle="collapse" data-bs-target="#big-dropdown"
-                                aria-expanded="false" aria-controls="collapseExample" style="cursor: pointer;">
-                                <a href="#"> New Arrivals </a>
-                                <!-- <fa-icon [icon]="chevron"></fa-icon> -->
+                        <li><a [routerLink]="['']">Ana Səhifə</a></li>
+                        <li>
+                            <a [routerLink]="['/app/new-arrivals']">
+                                Yeni Gələnlər
                             </a>
-                            <!-- <ul class="collapse drop-menu" id="big-dropdown">
-                                <li class="sub-dropdown" data-bs-toggle="collapse" data-bs-target="#sub-dropdown1"
-                                    aria-expanded="false" aria-controls="collapseExample">
-                                    <a href="">Laptops & Computers</a>
-                                    <fa-icon [icon]="chevron"></fa-icon>
-                                    <ul class="collapse sub-drop-menu" id="sub-dropdown1">
-                                        <li><a href="">Computers</a></li>
-                                        <li><a href="">Computers</a></li>
-                                        <li><a href="">Computers</a></li>
-                                        <li><a href="">Computers</a></li>
-                                    </ul>
-                                </li>
-                                <li *ngFor="let department of departments;index as i" class="sub-dropdown"
-                                data-toggle="collapse" attr.data-target="#subdrop{{department.id}}" aria-expanded="false"
-                                aria-controls="collapseExample">
-                                <a href="">{{department.name}}</a>
-                                <fa-icon [icon]="chevron"></fa-icon>
-                                <ul class="collapse sub-drop-menu" id="subdrop{{department.id}}">
-                                    <li *ngFor="let category of department.categories">
-                                        <a href="">{{category.name}}</a>
-                                    </li>
-                                </ul>
-                            </li>
-                                <li class="sub-dropdown" data-bs-toggle="collapse" data-bs-target="#sub-dropdown2"
-                                    aria-expanded="false" aria-controls="collapseExample">
-                                    <a href="">Laptops & Computers</a>
-                                    <fa-icon [icon]="chevron"></fa-icon>
-                                    <ul class="collapse sub-drop-menu" id="sub-dropdown2">
-                                        <li><a href="">Computers</a></li>
-                                        <li><a href="">Computers</a></li>
-                                        <li><a href="">Computers</a></li>
-                                        <li><a href="">Computers</a></li>
-                                    </ul>
-                                </li>
-                                <li class="sub-dropdown" data-bs-toggle="collapse" data-bs-target="#sub-dropdown3"
-                                    aria-expanded="false" aria-controls="collapseExample">
-                                    <a href="">Laptops & Computers</a>
-                                    <fa-icon [icon]="chevron"></fa-icon>
-                                    <ul class="collapse sub-drop-menu" id="sub-dropdown3">
-                                        <li><a href="">Computers</a></li>
-                                        <li><a href="">Computers</a></li>
-                                        <li><a href="">Computers</a></li>
-                                        <li><a href="">Computers</a></li>
-                                    </ul>
-                                </li>
-                                <li class="sub-dropdown" data-bs-toggle="collapse" data-bs-target="#sub-dropdown4"
-                                    aria-expanded="false" aria-controls="collapseExample">
-                                    <a href="">Laptops & Computers</a>
-                                    <fa-icon [icon]="chevron"></fa-icon>
-                                    <ul class="collapse sub-drop-menu" id="sub-dropdown4">
-                                        <li><a href="">Computers</a></li>
-                                        <li><a href="">Computers</a></li>
-                                        <li><a href="">Computers</a></li>
-                                        <li><a href="">Computers</a></li>
-                                    </ul>
-                                </li>
-                            </ul> -->
                         </li>
-                        <li><a href="#">Trending</a></li>
-                        <li><a href="#">Hot Deals</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a [routerLink]="['/app/trending']">Trend</a></li>
+                        <li><a [routerLink]="['/app/hot-deals']"> Ən Yaxşı Təkliflər </a></li>
+                        <li><a [routerLink]="['/app/contact']">Əlaqə</a></li>
                     </ul>
                 </div>
             </div>
